. [NEW] v1.1 Forward-ported changes:
		Denshion: Background music fades ok (issue #1304)
		MenuItem: removed warning when deleting item
		Sprite: fixed possible setColor and opacity
		TileMap: Flipped tiles can be changed during runtime (issue #1264)
		TileMap: Fixed a problem with multiple layers and multiple tile sets that could cause TMX maps to not load if rotation is used (issue #1302)
. [NEW] Animation: Added new animation format that supports delays per frame and notifications per frame
. [NEW] Director: When the stats are on, the number of GL draw calls per frame are displayed
		Added support for main-thread director (Mac only. Needed for some editors)
. [NEW] LabelTTF: fontName and fontSize are properties
. [NEW] LabelBMFont: added setFntFile method
. [NEW] Menu: could be created/initialized using NSArray
			Menu could be created without items
			Menu could be enabled/disabled (no events will be accepted when it is disabled)
			It is possible to change its priority on runtime
			Renamed kCCMenuTouchPriority -> kCCMenuHandlerPriority
. [NEW] Sprite: spriteWithBatchNode / initWithBatchNode were removed. Use initWithTexture:batch.texture / spriteWithTexture:batch.texture instead
. [NEW] TextureAtlas: Added option to not use VAO (might be a bit slower, but it consumes less memory)
. [NEW] TileMap: polygon, polilines and gid are parsed from the objects (issue #1311)
. [FIX] DrawingPrimitives: drawColor4f() uses GLFloat instead of GLbyte (issue #1307)
. [FIX] GLProgram: report error correctly if vertex shader has compile issues
. [FIX] GLView: Fixed memory leak while dispatching events (Mac only)
. [FIX] GLView: MSAA support is working (issue #1315)
. [FIX] Particles: Fixed memory leak in fillWithEmptyQuadsFromIndex
. [FIX] Sprite: adding family of sprites to a batchnode works as expected (issue #1217)
. [FIX] SpriteBatch: Quad extensions are public
. [FIX] Tests: LabelTest with custom TTF font works on Mac too